# MC-Mod-Manager

./: .gitignore  AGENTS.md  README.md  index.html  migration-plan.md  package-lock.json  package.json  prompt.md  requirements.md  tailwind.config.ts  technical-design.md  tsconfig.node.json
.claude/: settings.local.json
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260625-204747.753589-000001.md
prompts/: patch-01.md  step-01.md  step-02.md  step-03.md  step-04.md  step-05.md  step-06.md  step-07.md  step-08.md  step-09.md
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: curseforge.rs  db.rs  lib.rs  main.rs  merger.rs  modrinth.rs  types.rs
src-tauri/src/commands/: batch_download.rs  category.rs  collections.rs  download.rs  manifest.rs  mod.rs  popular.rs  recently_viewed.rs  resource.rs  search.rs  settings.rs
src/components/collection/: CollectionCard.tsx  CollectionSelectModal.tsx  CompatibilityCheck.tsx  ItemRow.tsx
src/components/common/: Empty.tsx  Loading.tsx  Toast.tsx  ToastProvider.tsx
src/components/home/: ContextMenu.tsx  HotSection.tsx  RecentlyViewed.tsx  ResourceCard.tsx  SearchBar.tsx  UpdateAlerts.tsx
src/components/layout/: Navbar.tsx
src/components/resource/: DownloadButton.tsx  (+2 more)
src/lib/: format.ts  tauri.ts
src/pages/: CategoryPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  HomePage.tsx  ResourcePage.tsx  SettingsPage.tsx  UpdatesPage.tsx
src/types/: index.ts
